Sat Mar 18 18:59:45 1995  John Gilmore  (gnu at toad.com)

	* kerberos_v4.c:  Replace STDARG_PROTOTYPES with HAVE_STDARG_H.

Tue Mar 14 15:25:38 1995    <tytso@rsx-11.mit.edu>

	* configure.in, Makefile.in: Use the libdes425 library so that the
		DES code doesn't get dragged in twice.

	* kdc_util.c (validate_as_request): Allow a client to obtain a
		password changing ticket, even if the client's key is
		expired.

	* main.c (usage, process_args, main): The KDC will disassociate
		itself from the terminal by default, unless the -n option
		is given.

Thu Mar  2 12:16:50 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in (ISODELIB): Remove reference to $(ISODELIB).

Wed Mar  1 16:30:27 1995  Theodore Y. Ts'o  <tytso@dcl>

	* configure.in: Remove ISODE_INCLUDE and ISODE_DEFS, replace check
		for -lsocket and -lnsl with WITH_NETLIB check.

Tue Feb 28 02:27:11 1995  John Gilmore  (gnu at toad.com)

	* *.[ch]:  Avoid <krb5/...> and <com_err.h> includes.

Fri Feb 10 14:35:42 1995  Theodore Y. Ts'o  <tytso@dcl>

	* do_tgs_req.c (process_tgs_req): krb5_use_keytype() was being
		called when the argument was a encryption type.   Change
		use to krb5_use_cstype().  Actually, any use of
		krb5_use_keytype() is a bug by definition.

Wed Feb 01 21:07:03 1995  Chris Provenzano (proven@mit.edu)

	* kdc_util.c (kdc_rdreq_keyproc()) Add krb5_keytype() arg.

Wed Jan 25 23:20:07 1995  Theodore Y. Ts'o  (tytso@dcl)

	* network.c (setup_network), main.c (process_args): Allow the
		primary port that the KDC listens on be configurable on the
		command line.  If the appropriate /etc/services entries
		aren't found, use compiled in defaults.

Wed Jan 25 16:54:40 1995  Chris Provenzano (proven@mit.edu)

        * Removed all narrow types and references to wide.h and narrow.h

Fri Jan 13 15:23:47 1995  Chris Provenzano (proven@mit.edu)

    * Added krb5_context to all krb5_routines

Thu Dec  8 00:33:05 1994    <tytso@rsx-11.mit.edu>
